erDiagram
    ORG ||--o{ USER : "has members"
    ORG ||--o{ TRUCK : "owns"
    ORG ||--o{ CUSTOMER : "serves"
    USER }o--|| ROLE : "has role"
    CUSTOMER ||--o{ ORDER : "places"
    ORDER ||--o| TRIP : "becomes"
    TRIP }o--|| TRUCK : "uses"
    TRIP }o--|| USER : "assigned driver"
    TRIP ||--o{ DOCUMENT : "generates"
    TRIP ||--o{ STATUS_EVENT : "logs"
    TRIP ||--o{ GPS_PING : "emits"
    TRIP ||--o{ EXPENSE : "has"
    TRIP ||--o| SETTLEMENT : "settles"
    CUSTOMER ||--o{ WHATSAPP_THREAD : "linked to"
